--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/application.properties
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/application.properties
@@ -1,8 +1,7 @@
 # 应用名称
-spring.application.name=xuecheng-plus-base
+#spring.application.name=xuecheng-plus-content-api
 
 
 spring.jackson.default-property-inclusion=always
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-
