--- a/xuecheng-plus-base/src/main/resources/application.properties
+++ b/xuecheng-plus-base/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # 应用名称
-spring.application.name=xuecheng-plus-base
+#spring.application.name=xuecheng-plus-base
 
 
 spring.jackson.default-property-inclusion=always
