--- a/xuecheng-plus-system/xuecheng-plus-system-service/pom.xml
+++ b/xuecheng-plus-system/xuecheng-plus-system-service/pom.xml
@@ -30,6 +30,10 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
         <!-- Spring Boot 集成 Junit -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
