--- a/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
@@ -1,31 +1,60 @@
-server:
-  servlet:
-    context-path: /content
-  port: 63040
+#server:
+#  servlet:
+#    context-path: /content
+#  port: 63040
 #微服务配置
 spring:
   application:
     name: content-api
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.101.128:3306/content?serverTimezone=UTC&userUnicode=true&useSSL=false&
-    username: root
-    password: 12345
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://192.168.101.128:3306/content?serverTimezone=UTC&userUnicode=true&useSSL=false&
+#    username: root
+#    password: 12345
+  cloud:
+    nacos:
+      server-addr: 192.168.101.128:8848
+      discovery: #服务注册相关的配置
+        namespace: b31ce694-f1d6-4e94-a9e3-23967cae5233
+        group: xuecheng-plus-project
+      config: #服务注册相关配置
+        namespace: b31ce694-f1d6-4e94-a9e3-23967cae5233
+        group: xuecheng-plus-project
+        file-extension: yaml
+        refresh-enabled: true
+        shared-configs:
+          - data-id: swagger-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+          - data-id: logging-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
+  ##        引入别的配置
+        extension-configs:
+          - data-id: content-service-${spring.profiles.active}.yaml
+            group: xuecheng-plus-project
+            refresh: true
+    config:
+      override-none: true #本地优先配置
+  profiles:
+    active: dev
+#    inetutils:
+#      ignored-interfaces: 'VMware Virtual Ethernet Adapter for VMnet1,VMware Virtual Ethernet Adapter for VMnet8'
+##
 # 日志文件配置路径
-mybatis-plus:
-  configuration:
-    # 日志
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  global-config:
-    db-config:
-      logic-delete-field: delFlag #配置逻辑删除字段
-      logic-delete-value: 1
-      logic-not-delete-value: 0
-#      id-type: auto
-swagger:
-  title: "学成在线内容管理系统"
-  description: "内容系统管理系统对课程相关信息进行管理"
-  base-package: tang.xuechengpluscontentapi.content
-  enabled: true
-  version: 1.0.0
-
+#mybatis-plus:
+#  configuration:
+#    # 日志
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  global-config:
+#    db-config:
+#      logic-delete-field: delFlag #配置逻辑删除字段
+#      logic-delete-value: 1
+#      logic-not-delete-value: 0
+##      id-type: auto
+#swagger:
+#  title: "学成在线内容管理系统"
+#  description: "内容系统管理系统对课程相关信息进行管理"
+#  base-package: tang.xuechengpluscontentapi.content
+#  enabled: true
+#  version: 1.0.0
