--- a/xuecheng-plus-media/xuecheng-plus-media-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-media/xuecheng-plus-media-api/src/main/resources/bootstrap.yml
@@ -24,6 +24,8 @@ spring:
           - data-id: logging-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
+    config:
+      override-none: true
   profiles:
     active: dev
 #minio:
@@ -40,4 +42,3 @@ spring:
 #  bucket:
 #    files: mediafiles
 #    videofiles: video
-
