--- a/xuecheng-plus-orders/xuecheng-plus-orders-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-orders/xuecheng-plus-orders-api/src/main/resources/bootstrap.yml
@@ -4,12 +4,12 @@ spring:
     name: orders-api
   cloud:
     nacos:
-      server-addr: 192.168.101.65:8848
+      server-addr: 192.168.101.128:8848
       discovery:
-        namespace: dev166
+        namespace: b31ce694-f1d6-4e94-a9e3-23967cae5233
         group: xuecheng-plus-project
       config:
-        namespace: dev166
+        namespace: b31ce694-f1d6-4e94-a9e3-23967cae5233
         group: xuecheng-plus-project
         file-extension: yaml
         refresh-enabled: true
