--- a/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
@@ -35,6 +35,9 @@ spring:
           - data-id: fegin-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
+          - data-id: redis-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
 #          - data-id: search-${spring.profiles.active}.yaml
 #            group: xuecheng-plus-common
 #            refresh: true
