--- a/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
@@ -32,6 +32,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
         <!-- Spring Cloud 微服务远程调用 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
