--- a/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
@@ -37,7 +37,7 @@ spring:
             refresh: true
           - data-id: redis-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
-            refresh: true
+            refresh: true #设置内容自动刷新
 #          - data-id: search-${spring.profiles.active}.yaml
 #            group: xuecheng-plus-common
 #            refresh: true
